public/stylesheets/htwplus.css
/* ... */
.hp-pagination > ul {
	margin-bottom: 0;
}

.hp-pagination a.active {
	background: #76b900;
	color: white;	
}


/*============================== Post & Comment View ==============================*/

.hp-horizontal-form {
	padding: 0;
	float: none !important;
}

.hp-horizontal-form .input-group-btn {
	padding-left: 10px;
	vertical-align: top;
}

.hp-horizontal-form textarea,
.hp-horizontal-form button {
	border-radius: 4px!important;
}

#hp-new-comment-content,
#hp-new-post-content {
	height: 31px;
    transition: height 0.5s ease 0.2s;
	-webkit-transition: height 0.5s ease 0.2s;
	-moz-transition: height 0.5s ease 0.2s;
	-ms-transition: height 0.5s ease 0.2s;
	-o-transition: height 0.5s ease 0.2s;
}

#hp-new-comment-content:focus,
#hp-new-post-content:focus {
	height: 104px;
}

.hp-comments {
	margin-left: 50px;
}

@media (max-width: 767px) {
    .hp-comments {
        margin-left: 15px;
    }
}

.hp-comment-form {
	margin-top: 15px;
}

.hp-post-form label,
.hp-comment-form label {
	display: none;
}

.hp-post-form dl, dd,
.hp-comment-form dl, dd {
	margin: 0;
}

.media-heading .popover  {
	font-size: 11px;
    font-weight: normal;
    line-height: 16px;
}

.well {
	padding: 15px;
	margin-bottom: 0;
}
.well.broadcast {
    border: 1px solid #76b900;
}

.media small {
	color: #999999;
}

.media-heading .glyphicon {
    line-height: inherit;
}

.media-heading a.disabled .glyphicon {
    color: #bbbbbb;
}

.media-heading a {
    cursor: pointer;
}

.media-heading a.disabled {
    pointer-events: auto;
    cursor: default;
}

.hp-postLink {
	color: #0082D1;
}

.hp-postLink .glyphicon,
.hp-postLink .glyphicon:hover {
    color: inherit;
    text-decoration: inherit;
    top: 0;
}

/*============================== Avatare ==============================*/

#hp-avatars img {
	margin-bottom: 8px;
	margin-right: 8px;
	width: 64px;
}

#hp-avatars img:hover {
	border-color: #5a5858;
}

#hp-avatars img.active {
  border-color: rgba(255, 95, 0, 0.8);
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 95, 0, .6);
  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 95, 0, .6);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 95, 0, .6);
}

.hp-avatar {
	width: 120px;
	height: 120px;
}

#hp-navbar .hp-avatar {
	height: 32px;
	width: 32px;
}

@media (max-width: 350px) {
    .hp-nav li > a {
        padding-left: 10px;
        padding-right: 10px;
    }
}

dl .hp-avatar {
	width: 80px;
	height: 80px;
}

.media .hp-avatar,
table .hp-avatar {
	width: 25px;
	height: 25px;
}

table .hp-avatar {
	margin-bottom: -4px;
    margin-top: -4px;
}

div[class*="hp-avatar-default-"] {
	color: white;
	text-align: center;
	vertical-align: middle;
    line-height: 30px;
}

div.hp-avatar-default-0 {
	background-color: rgb(153, 205, 100);
}

div.hp-avatar-default-1 {
	background-color: rgb(255, 193, 40);
}

div.hp-avatar-default-2 {
	background-color: rgb(98, 159, 161);
}

div.hp-avatar-default-3 {
	background-color: rgb(90, 88, 88);
}

div.hp-avatar-default-4 {
	background-color: rgb(230, 178, 130);
}

div.hp-avatar-default-5 {
	background-color: rgb(43, 192, 175);
}

div.hp-avatar-default-6 {
	background-color: rgb(152, 84, 192);
}

div.hp-avatar-default-7 {
	background-color: rgb(192, 84, 162);
}

div.hp-avatar-default-8 {
	background-color: rgb(219, 93, 93);
}

div.hp-avatar-default-9 {
	background-color: rgb(95, 121, 63);
}

table td .hp-avatar-small {
	margin: -4px;
}

.hp-avatar-small {
    width: 30px;
    height:  30px;
    border-radius: 4px;
}

.hp-avatar-large {
    width: 250px;
    height: 250px;
    border-radius: 6px;
}

.hp-avatar-navi {
    width: 32px;
    height: 32px;
    display: inline-block;
    border-radius: 4px;
}

.hp-avatar-medium {
    width: 72px;
    height: 72px;
    border-radius: 5px;
    display: inline-block;
}

.hp-avatar-input-wrapper {
    display: inline-block;
    height: 32px;

    overflow: hidden;
    position: relative;
    cursor: pointer;
    /*Using a background color, but you can use a background image to represent a button*/
}

.hp-avatar-fileinput {
    cursor: pointer;
    height: 100%;
    position:absolute;
    top: 0;
    right: 0;
    z-index: 99;
    /*This makes the button huge. If you want a bigger button, increase the font size*/
    font-size:50px;
    /*Opacity settings for all browsers*/
    opacity: 0;
    -moz-opacity: 0;
    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0)
}

.hp-avatar-flash {
    margin-top: 10px;
    margin-left: 5px;
}

.hp-avatar-error {
    color: darkred;
}

.hp-avatar-success {
    color: #205c0c;
}

.hp-avatar-loading {
    background-image: url(../images/loading.gif);
    width: 16px;
    height: 16px;
    vertical-align: middle;
    margin-right: 8px;
    background-size: 100%;
    display: none;
}

.cropper-line {
    background-color: #76b900 !important;
}

.cropper-view-box {
    outline: 1px solid #76b900 !important;
    outline-color: #76b900 !important;
}

.cropper-point {
    background-color: #76b900 !important;
}


/*============================== Token ==============================*/

#token-input {
	display:none;
}

/*============================== Ajax ==============================*/

.loading {
	background-image: url(../images/loading.gif);
	width: 16px;
	height: 16px;
	vertical-align: middle;
	margin-right: 8px;
	background-size: 100%;
	display: none;
}

.loading#loadingMedia{
	vertical-align: top;
}

#loading-active {
	background-image: url(../images/loading.gif);
	width: 16px;
	height: 16px;
	background-size: 100%;
}

#fileupload-status {
	display: none;
}

/*============================== Options Menu ==============================*/

.hp-optionsMenu {
    overflow: visible;
    padding: 0!important;
}

.hp-optionsMenu .dropdown-menu {
    background-color: #5a5858;
    color: white;
    opacity: 0.93;
    margin: 0;
    padding: 8px 13px;
    float: none;
    right: 53px;
    left: auto;
    min-width: initial;
}
/* ... */

